<resources>
    <string name="app_name">Court Counter</string>
    <string name="team_a_title">Team A</string>
    <string name="team_b_title">Team B</string>
    <string name="team_a_score">0</string>
    <string name="team_b_score">0</string>
    <string name="add_three_for_teams">+3 Points</string>
    <string name="add_two_for_teams">+2 Points</string>
    <string name="add_one_for_teams">Free Throw</string>
    <string name="reset_team_scores">Reset</string>
</resources>
